docs(security): 消除 @CurrentUser/SecurityContext/TenantContext 文档漂移，对齐 RequestContext 现状
2026-04 架构重构删除了 SecurityContext/TenantContext/@CurrentUser/TenantContextFilter，
统一为 RequestContext，但文档未同步。本次按 issue #18 方案 1 全面修文档：

- 使用手册：§1.2 预览特性结论纠正（ScopedValue 在 cartisan-core，所有模块需 --enable-preview）；
  §1.6 特性表、§2.10 请求上下文（包名 core + 完整 8 字段）、§2.16/2.17 改为 SecurityFilter/
  TenantFilter、§2.18 AuthenticationService 对齐实际签名、§2.22 改为 AuthorizationBypassResolver；
  §3.9/3.10/3.11/3.12 示例改用 RequestContext，删除 StpUtil 直接调用示例
- 设计文档 §4.4：SecurityContext/TenantContext 块 → RequestContext + 两 Filter，补包结构
- PITFALLS JV-003：类名与影响范围更新
- 删除 docs/guide/TenantContext多租户上下文使用指南.md（595 行，全部为已删除 API 用法，无引用）
- CartisanDataJpaAutoConfiguration javadoc：SecurityContext → RequestContext

Closes #18

Co-Authored-By: Claude <noreply@anthropic.com>